--- a/EF_Example/Views/User/_ViewStart.cshtml
+++ b/EF_Example/Views/User/_ViewStart.cshtml
@@ -1,3 +1,4 @@
-﻿@{
+﻿<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
